[project]
name = "x-bookmarked-posts"
version = "0.1.0"
description = "CLI for organizing X bookmarked posts with spaced repetition"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.23.0",
    "rich>=15.0.0",
    "tweepy>=4.16.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "sentence-transformers>=5.1",
    "scikit-learn>=1.5",
    "fsrs>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
xbm = "src.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"